[package]
name = "rumoca_parser"
authors = ["James Goppert", "Benjamin Perseghetti"]
description = "A Modelica translator with focus on Casadi, Sympy, JAX, and Collimator generation"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
lalrpop = "0.22.0"
rerun_except = "1.0.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
codespan-reporting = "0.11.1"
lalrpop-util = "0.22.0"
logos = "0.15.0"
macro_rules_attribute = "0.2.0"
md5 = "0.7.0"
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }

[profile.dev]
incremental = true
